--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,12 @@
     <quarkus.platform.version>3.7.0.CR1</quarkus.platform.version>
     <skipITs>true</skipITs>
     <surefire-plugin.version>3.1.2</surefire-plugin.version>
+    <formatter-plugin.version>2.23.0</formatter-plugin.version>
+    <impsort-plugin.version>1.9.0</impsort-plugin.version>
   </properties>
 
   <modules>
+    <module>build-tools</module>
     <module>server</module>
     <module>metadata</module>
   </modules>
@@ -110,9 +113,76 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>net.revelc.code.formatter</groupId>
+        <artifactId>formatter-maven-plugin</artifactId>
+        <version>${formatter-plugin.version}</version>
+        <configuration>
+          <!-- Setting to 17 because the plugin does not support 21 -->
+          <compilerCompliance>17</compilerCompliance>
+          <configFile>eclipse-format.xml</configFile>
+          <lineEnding>LF</lineEnding>
+          <skip>${format.skip}</skip>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>net.revelc.code</groupId>
+        <artifactId>impsort-maven-plugin</artifactId>
+        <version>${impsort-plugin.version}</version>
+        <configuration>
+          <!-- Setting to 17 because the plugin does not support 21 -->
+          <compliance>17</compliance>
+          <groups>java.,javax.,jakarta.,org.,com.</groups>
+          <staticGroups>*</staticGroups>
+          <skip>${format.skip}</skip>
+          <removeUnused>true</removeUnused>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <profiles>
+    <profile>
+      <id>format</id>
+      <activation>
+        <!-- This profile is effectively activated by default -->
+        <property>
+          <name>!no-format</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>net.revelc.code.formatter</groupId>
+            <artifactId>formatter-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>format-sources</id>
+                <phase>process-sources</phase>
+                <goals>
+                  <goal>format</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>net.revelc.code</groupId>
+            <artifactId>impsort-maven-plugin</artifactId>
+            <configuration>
+              <removeUnused>true</removeUnused>
+            </configuration>
+            <executions>
+              <execution>
+                <id>sort-imports</id>
+                <phase>process-sources</phase>
+                <goals>
+                  <goal>sort</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>native</id>
       <activation>
