--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,6 +10,9 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>power-server</artifactId>
+    <name>power-server : server</name>
+    <description>A RESTful endpoint to retrieve power consumption information on a per-process basis</description>
+
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
