--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,8 @@
         <central-maven-publishing-plugin.version>0.3.1</central-maven-publishing-plugin.version>
         <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
         <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
+        <buildnumber-maven-plugin.version>3.2.0</buildnumber-maven-plugin.version>
+        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
     </properties>
 
     <modules>
@@ -253,6 +255,56 @@
             <id>release</id>
             <build>
                 <plugins>
+                    <!-- Set properties containing the scm revision -->
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>buildnumber-maven-plugin</artifactId>
+                        <version>${buildnumber-maven-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>get-scm-revision</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>create</goal>
+                                </goals>
+                                <configuration>
+                                    <doCheck>false</doCheck>
+                                    <doUpdate>false</doUpdate>
+                                    <revisionOnScmFailure>UNKNOWN</revisionOnScmFailure>
+                                    <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <version>${maven-jar-plugin.version}</version>
+                        <configuration>
+                            <archive>
+                                <index>true</index>
+                                <manifest>
+                                    <addDefaultSpecificationEntries>
+                                        true
+                                    </addDefaultSpecificationEntries>
+                                    <addDefaultImplementationEntries>
+                                        true
+                                    </addDefaultImplementationEntries>
+                                </manifest>
+                                <manifestEntries>
+                                    <Implementation-URL>${project.url}</Implementation-URL>
+                                    <Java-Version>${java.version}</Java-Version>
+                                    <Java-Vendor>${java.vendor}</Java-Vendor>
+                                    <Os-Name>${os.name}</Os-Name>
+                                    <Os-Arch>${os.arch}</Os-Arch>
+                                    <Os-Version>${os.version}</Os-Version>
+                                    <Scm-Url>${project.scm.url}</Scm-Url>
+                                    <Scm-Connection>${project.scm.connection}</Scm-Connection>
+                                    <Scm-Revision>${buildNumber}</Scm-Revision>
+                                </manifestEntries>
+                            </archive>
+                        </configuration>
+                    </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
@@ -270,11 +322,35 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
                         <version>${maven-source-plugin.version}</version>
+                        <configuration>
+                            <archive>
+                                <index>true</index>
+                                <manifest>
+                                    <addDefaultSpecificationEntries>
+                                        true
+                                    </addDefaultSpecificationEntries>
+                                    <addDefaultImplementationEntries>
+                                        true
+                                    </addDefaultImplementationEntries>
+                                </manifest>
+                                <manifestEntries>
+                                    <Implementation-URL>${project.url}</Implementation-URL>
+                                    <Java-Version>${java.version}</Java-Version>
+                                    <Java-Vendor>${java.vendor}</Java-Vendor>
+                                    <Os-Name>${os.name}</Os-Name>
+                                    <Os-Arch>${os.arch}</Os-Arch>
+                                    <Os-Version>${os.version}</Os-Version>
+                                    <Scm-Url>${project.scm.url}</Scm-Url>
+                                    <Scm-Connection>${project.scm.connection}</Scm-Connection>
+                                    <Scm-Revision>${buildNumber}</Scm-Revision>
+                                </manifestEntries>
+                            </archive>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
                                 <goals>
-                                    <goal>jar</goal>
+                                    <goal>jar-no-fork</goal>
                                 </goals>
                             </execution>
                         </executions>
