refactor: better tag handling

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,5 +55,7 @@ jobs:
           MAVEN_PASSWORD: "${{ secrets.OSSRH_TOKEN }}"
           MAVEN_GPG_PASSPHRASE: "${{ secrets.GPG_PASSPHRASE }}"
 
-      - name: Push tags
-        run: git push && git push --tags
+      - name: Push changes to ${{github.base_ref}} branch
+        run: |
+          git push
+          git push origin ${{steps.metadata.outputs.current-version}}
