fix: testing workflow

--- a/.github/workflows/native-build.yml
+++ b/.github/workflows/native-build.yml
@@ -1,10 +1,11 @@
+name: Native build test
+
 on:
   workflow_dispatch:
 
 jobs:
   # Build native executable per runner
   package:
-    needs: [ maven-release ]
     name: 'Build with Graal on ${{ matrix.os }}'
     strategy:
       fail-fast: true
